--- a/index.html
+++ b/index.html
@@ -1,214 +1,132 @@
+
+
 <!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Phantom by HTML5 UP</title>
+		<title>Song App</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
+		<link rel="stylesheet" href="assets/css/main.css" />
 
 		<script src="https://connect.soundcloud.com/sdk.js"></script>
-				<script
+		<script
 						src="https://code.jquery.com/jquery-3.2.1.js"
 						integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
-						crossorigin="anonymous"></script>
-				<script src="js/script.js"></script>
+		crossorigin="anonymous"></script>
 
-
-
+    <script src="js/script.js"></script>
+		<style>
+body {
+    background-image: url("images/1.jpeg");
+		background-size: 1300px 1300px;
+}
+</style>
 	</head>
-	<body>
-		<!-- Wrapper -->
+	<body background="images/images.jpeg">
+
 			<div id="wrapper">
 
-				<!-- Header -->
-					<header id="header">
-						<div class="inner">
 
-							<!-- Logo -->
-								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
-								</a>
 
-							<!-- Nav -->
-								<nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav>
 
-						</div>
-					</header>
-
-				<!-- Menu -->
-					<nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-					</nav>
-
-				<!-- Main -->
 					<div id="main">
 						<div class="inner">
 							<header>
+							<center>	<h1 style="color:blue;">lovely songs<br />
+							</h1></center>
 
 							</header>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic01.jpg"  alt="" />
+										<img src="images/pic01.jpg" width=200px height=200px border="5" alt="" />
 									</span>
-									<a href="#" id="start1">
-										<h2>Magna</h2>
+									<a href="#">
+										<h2>helly shah</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+
+											<button type="button" name="button" id="start1">Start</button>
+														<button type="button" name="button" id="stop1">Stop</button>
 										</div>
 									</a>
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic02.jpg"  alt="" />
+										<img src="images/pic02.jpg" width=200px height=200px border="5" alt="" />
 									</span>
-									<a href="#" id="start2">
-										<h2>Lorem</h2>
+									<a href="#">
+										<h2>ean kathal</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+
+											<button type="button" name="button" id="start2">Start</button>
+														<button type="button" name="button" id="stop2">Stop</button>
 										</div>
+
 									</a>
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/pic03.jpg" width=200px height=200px border="5" alt="" />
 									</span>
-									<a href="#" id="start3">
-										<h2>Feugiat</h2>
+									<a href="#">
+										<h2>kathal</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+
+											<button type="button" name="button" id="start3">Start</button>
+														<button type="button" name="button" id="stop3">Stop</button>
 										</div>
 									</a>
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="images/pic04.jpg"  alt="" />
+										<img src="images/pic04.jpg" width=200px height=200px border="5" alt="" />
 									</span>
-									<a href="#" id="start1">
-										<h2>Tempus</h2>
+									<a href="#">
+										<h2>suwara</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+
+											<button type="button" name="button" id="start4">Start</button>
+														<button type="button" name="button" id="stop4">Stop</button>
 										</div>
+
 									</a>
 								</article>
-								<article class="style1">
+								<article class="style5">
 									<span class="image">
-										<img src="images/pic05.jpg"  alt="" />
+										<img src="images/pic05.jpg" width=200px height=200px border="5" alt="" />
 									</span>
-									<a href="#" id="start1">
-										<h2>Aliquam</h2>
+									<a href="#">
+										<h2>singam5</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+
+											<button type="button" name="button" id="start5">Start</button>
+														<button type="button" name="button" id="stop5">Stop</button>
 										</div>
 									</a>
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="images/pic06.jpg"  alt="" />
+										<img src="images/pic06.jpg" width=200px height=200px border="5" alt="" />
 									</span>
-									<a href="#" id="start6">
-										<h2>Veroeros</h2>
+									<a href="#">
+										<h2>valli</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+
+											<button type="button" name="button" id="start6">Start</button>
+														<button type="button" name="button" id="stop6">Stop</button>
 										</div>
 									</a>
 								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/pic07.jpg"  alt="" />
-									</span>
-									<a href="#" id="start7">
-										<h2>Ipsum</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic08.jpg"  alt="" />
-									</span>
-									<a href="#" id="start8">
-										<h2>Dolor</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic09.jpg"  alt="" />
-									</span>
-									<a href="#" id="start9">
-										<h2>Nullam</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
+
 
 							</section>
 						</div>
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="field half first">
-										<input type="text" name="name" id="name" placeholder="Name" />
-									</div>
-									<div class="field half">
-										<input type="email" name="email" id="email" placeholder="Email" />
-									</div>
-									<div class="field">
-										<textarea name="message" id="message" placeholder="Message"></textarea>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="special" /></li>
-									</ul>
-								</form>
-							</section>
-							<section>
-								<h2>Follow</h2>
-								<ul class="icons">
-									<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
-								</ul>
-							</section>
-							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer>
+
 
 			</div>
 
