--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <html>
 	<head>
-		<title>Song App</title>
+		<title>Music App</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -22,9 +22,14 @@ body {
     background-image: url("images/1.jpeg");
 		background-size: 1300px 1300px;
 }
+
 </style>
 	</head>
 	<body background="images/images.jpeg">
+
+<img src="images/pic.jpg" width=1290px height=200px border="5" alt="" />
+
+
 
 			<div id="wrapper">
 
@@ -34,17 +39,30 @@ body {
 					<div id="main">
 						<div class="inner">
 							<header>
-							<center>	<h1 style="color:blue;">lovely songs<br />
+							<center>	<h1 style="color:blue;">my favourit movie songs<br />
 							</h1></center>
 
 							</header>
+							<table>
+								<tr><td>
+							<img src="images/123.jpeg" width=500px height=200px border="5" alt="" /><h2>BAIRAVA MOVIE SONGS</h2></td>
+							<td><h5>Bairavaa is a 2017 Indian Tamil-language action film written and directed by Bharathan and produced by Vijaya Productions. The film stars Vijay and Keerthy ...</h5>
+
+</td></tr></table>
+
+
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
 										<img src="images/pic01.jpg" width=200px height=200px border="5" alt="" />
 									</span>
 									<a href="#">
-										<h2>helly shah</h2>
+										<center><h2>Praveen Kumar ✌️</h2></center>
+<h6>
+Mahesh Prasad ♥♥♥<p>Azhagiya Soodana Poovey </p>
+</h6>
+
+</h2>
 										<div class="content">
 
 											<button type="button" name="button" id="start1">Start</button>
@@ -57,7 +75,13 @@ body {
 										<img src="images/pic02.jpg" width=200px height=200px border="5" alt="" />
 									</span>
 									<a href="#">
-										<h2>ean kathal</h2>
+										<center><h2>Praveen Kumar ✌️</h2></center>
+<h6>
+<p>Nillayo - Haricharan</p>
+</h6>
+
+
+
 										<div class="content">
 
 											<button type="button" name="button" id="start2">Start</button>
@@ -71,7 +95,12 @@ body {
 										<img src="images/pic03.jpg" width=200px height=200px border="5" alt="" />
 									</span>
 									<a href="#">
-										<h2>kathal</h2>
+										<center><h2>Praveen Kumar ✌️ </h2></center>
+<h6>
+<p> Papa Papa - 'Ilayathalapathy' Vijay , Priyadarshini</p>
+</h6>
+
+
 										<div class="content">
 
 											<button type="button" name="button" id="start3">Start</button>
@@ -84,7 +113,10 @@ body {
 										<img src="images/pic04.jpg" width=200px height=200px border="5" alt="" />
 									</span>
 									<a href="#">
-										<h2>suwara</h2>
+										<center><h2>Praveen Kumar ✌️ </h2></center>
+<h6>
+<p>Pattaya Kelappu - Ananthu</p>
+</h6>
 										<div class="content">
 
 											<button type="button" name="button" id="start4">Start</button>
@@ -98,7 +130,10 @@ body {
 										<img src="images/pic05.jpg" width=200px height=200px border="5" alt="" />
 									</span>
 									<a href="#">
-										<h2>singam5</h2>
+										<center><h2>Praveen Kumar ✌️</h2></center>
+<h6>
+<p>Varlaam Varlaam Vaa - ArunRajaKamaraj</p>
+</h6>
 										<div class="content">
 
 											<button type="button" name="button" id="start5">Start</button>
@@ -106,7 +141,7 @@ body {
 										</div>
 									</a>
 								</article>
-								<article class="style6">
+								<!--<article class="style6">
 									<span class="image">
 										<img src="images/pic06.jpg" width=200px height=200px border="5" alt="" />
 									</span>
@@ -118,7 +153,7 @@ body {
 														<button type="button" name="button" id="stop6">Stop</button>
 										</div>
 									</a>
-								</article>
+								</article>-->
 
 
 							</section>
